Make Slab Italic use `cyrl-{ze|e}`.`unilateral-bottom-inward-serifed`

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -8184,14 +8184,14 @@ long-s = "flat-hook-tailed"
 eszet = "sulzbacher-tailed-serifless"
 lower-lambda = "straight"
 lower-mu = "tailed-motion-serifed"
-cyrl-ze = "unilateral-inward-serifed"
+cyrl-ze = "unilateral-bottom-inward-serifed"
 cyrl-ka = "symmetric-connected-top-left-serifed"
 cyrl-en = "top-left-bottom-right-serifed"
 cyrl-u = "cursive-motion-serifed"
 cyrl-ef = "cursive"
 cyrl-yeri = "cursive"
 cyrl-yery = "cursive"
-cyrl-e = "unilateral-inward-serifed"
+cyrl-e = "unilateral-bottom-inward-serifed"
 micro-sign = "tailed-motion-serifed"
 
 
@@ -9719,10 +9719,21 @@ b = "toothed-serifless"
 c = "serifless"
 f = "serifed"
 g = "double-storey"
+h = "straight-serifless"
+i = "serifed"
+k = "straight-serifless"
+l = "serifed"
+m = "serifless"
+n = "straight-serifless"
 r = "hookless-serifed"
 s = "serifless"
 t = "flat-hook"
+v = "straight-serifless"
+w = "straight-serifless"
+x = "straight-serifless"
 y = "straight-turn-serifless"
+z = "straight-serifless"
+long-s = "bent-hook-serifless"
 eszet = "longs-s-lig-serifless"
 lower-eth = "straight-bar"
 lower-iota = "serifed-flat-tailed"
@@ -9732,11 +9743,13 @@ lower-chi = "semi-chancery-straight"
 cyrl-capital-ze = "unilateral-inward-serifed"
 cyrl-ze = "serifless"
 cyrl-capital-ka = "symmetric-connected-bottom-right-serifed"
+cyrl-ka = "symmetric-connected-serifless"
 cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
 cyrl-capital-e = "unilateral-inward-serifed"
 cyrl-e = "serifless"
 cyrl-capital-ya = "straight-motion-serifed"
+cyrl-ya = "straight-serifless"
 one = "base"
 five = "oblique-arched-serifless"
 six = "closed-contour"
@@ -9779,10 +9792,10 @@ y = "cursive-serifless"
 z = "cursive"
 long-s = "bent-hook-descending"
 eszet = "longs-s-lig-descending-serifless"
-cyrl-ze = "unilateral-inward-serifed"
+cyrl-ze = "unilateral-bottom-inward-serifed"
 cyrl-ka = "symmetric-connected-bottom-right-serifed"
 cyrl-u = "cursive-serifless"
-cyrl-e = "unilateral-inward-serifed"
+cyrl-e = "unilateral-bottom-inward-serifed"
 cyrl-ya = "straight-motion-serifed"
 
 [composite.ss17.slab-override.design]
@@ -9799,11 +9812,21 @@ capital-u = "toothed-serifed"
 capital-z = "straight-serifed"
 b = "toothed-serifed"
 c = "unilateral-inward-serifed"
-s = "bilateral-inward-serifed"
+h = "straight-serifed"
+k = "straight-serifed"
+m = "serifed"
+n = "straight-serifed"
+s = "unilateral-inward-serifed"
+v = "straight-serifed"
+w = "straight-serifed"
+x = "straight-serifed"
 y = "straight-turn-serifed"
+z = "straight-top-serifed"
+long-s = "bent-hook-bottom-serifed"
 eszet = "longs-s-lig-bottom-serifed"
 cyrl-ze = "unilateral-inward-serifed"
 cyrl-capital-ka = "symmetric-connected-serifed"
+cyrl-ka = "symmetric-connected-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-e = "unilateral-inward-serifed"
@@ -9817,13 +9840,20 @@ capital-u = "toothed-motion-serifed"
 b = "toothless-corner-serifed"
 h = "tailed-motion-serifed"
 k = "cursive-top-left-and-bottom-right-serifed"
-w = "cursive-serifed"
 m = "tailed-top-left-serifed"
 n = "tailed-motion-serifed"
+s = "bilateral-inward-serifed"
+v = "cursive-serifed"
+w = "cursive-serifed"
+x = "chancery"
 y = "cursive-motion-serifed"
+z = "cursive"
+long-s = "bent-hook-descending"
 eszet = "longs-s-lig-descending-serifless"
+cyrl-ze = "unilateral-bottom-inward-serifed"
 cyrl-ka = "symmetric-connected-top-left-and-bottom-right-serifed"
 cyrl-u = "cursive-motion-serifed"
+cyrl-e = "unilateral-bottom-inward-serifed"
 micro-sign = "tailed-motion-serifed"
 
 
