Add `serifed-capped` variants for `E`/`F` (#2026).

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -278,6 +278,13 @@ selector.E = "serifed"
 selector."E/sansSerif" = "serifless"
 selector."AE/EHalf" = "serifed"
 
+[prime.capital-e.variants.serifed-capped]
+rank = 4
+description = "E with serifs and capped middle bar"
+selector.E = "serifedCapped"
+selector."E/sansSerif" = "serifless"
+selector."AE/EHalf" = "serifedCapped"
+
 
 
 [prime.capital-f]
@@ -302,6 +309,13 @@ selector."currency/frenchFrancSign" = "topLeftSerifed"
 rank = 3
 description = "F with serifs"
 selector.F = "serifed"
+selector."F/sansSerif" = "serifless"
+selector."currency/frenchFrancSign" = "serifed"
+
+[prime.capital-f.variants.serifed-capped]
+rank = 4
+description = "F with serifs and capped middle bar"
+selector.F = "serifedCapped"
 selector."F/sansSerif" = "serifless"
 selector."currency/frenchFrancSign" = "serifed"
 
@@ -9194,6 +9208,7 @@ q = "earless-corner-straight-serifless"
 r = "earless-corner-serifless"
 u = "toothless-corner-serifless"
 y = "straight-turn-serifless"
+long-s = "bent-hook-serifless"
 eszet = "longs-s-lig-serifless"
 lower-alpha = "barred-earless-corner-tailed"
 capital-gamma = "bottom-serifed"
@@ -9258,6 +9273,7 @@ r = "earless-corner-serifed"
 u = "toothless-corner-serifed"
 y = "straight-turn-serifed"
 z = "straight-serifed"
+long-s = "bent-hook-bottom-serifed"
 eszet = "longs-s-lig-bottom-serifed"
 capital-gamma = "serifed"
 lower-mu = "toothless-corner-serifed"
@@ -9281,6 +9297,7 @@ r = "earless-corner-serifless"
 u = "tailed-motion-serifed"
 x = "straight-motion-serifed"
 y = "straight-turn-motion-serifed"
+long-s = "bent-hook-tailed"
 eszet = "longs-s-lig-tailed-serifless"
 lower-mu = "tailed-motion-serifed"
 cyrl-ka = "symmetric-touching-top-left-serifed"
