Add variant selectors for Capital Eszet and Thorn.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -4466,6 +4466,42 @@ selectorAffix."ezh/phoneticRight" = ""
 
 
 
+[prime.capital-eszet]
+sampler = "ẞ"
+samplerExplain = "Capital Eszet"
+nonBreakingTagForNewVariantSelector = "VXAC" # REMOVE IN NEXT MAJOR VERSION CHANGE
+tagKind = "letter"
+
+[prime.capital-eszet.variants-buildup]
+entry = "body"
+descriptionLeader = "Capital Eszet (`ẞ`)"
+
+[prime.capital-eszet.variants-buildup.stages.body."*"]
+next = "serifs"
+
+[prime.capital-eszet.variants-buildup.stages.body.rounded]
+rank = 1
+descriptionAffix = "rounded top"
+selectorAffix.Eszet = "rounded"
+
+[prime.capital-eszet.variants-buildup.stages.body.flat-top]
+rank = 2
+descriptionAffix = "flat top"
+selectorAffix.Eszet = "flatTop"
+
+[prime.capital-eszet.variants-buildup.stages.serifs.serifless]
+rank = 1
+descriptionJoiner = "without"
+descriptionAffix = "serifs"
+selectorAffix.Eszet = "serifless"
+
+[prime.capital-eszet.variants-buildup.stages.serifs.serifed]
+rank = 2
+descriptionAffix = "serifs"
+selectorAffix.Eszet = "serifed"
+
+
+
 [prime.long-s]
 sampler = "ſ"
 samplerExplain = "Long-S"
@@ -4693,6 +4729,32 @@ selector."eth" = "straight-bar"
 rank = 2
 description = "Lowercase Eth (`ð`) with a curly bar"
 selector."eth" = "curly-bar"
+
+
+
+[prime.capital-thorn]
+sampler = "Þ"
+samplerExplain = "Capital Thorn (`Þ`)"
+nonBreakingTagForNewVariantSelector = "VXAD" # REMOVE IN NEXT MAJOR VERSION CHANGE
+tagKind = "letter"
+
+[prime.capital-thorn.variants.serifless]
+rank = 1
+description = "Capital Thorn (`Þ`) without serifs"
+selector.Thorn = "serifless"
+selector.Wynn = "serifless"
+
+[prime.capital-thorn.variants.motion-serifed]
+rank = 2
+description = "Capital Thorn (`Þ`) with motion serifs"
+selector.Thorn = "motionSerifed"
+selector.Wynn = "motionSerifed"
+
+[prime.capital-thorn.variants.serifed]
+rank = 3
+description = "Capital Thorn (`Þ`) with serifs"
+selector.Thorn = "serifed"
+selector.Wynn = "serifed"
 
 
 
@@ -7990,9 +8052,12 @@ w = "straight-serifless"
 x = "straight-serifless"
 y = "straight-serifless"
 z = "straight-serifless"
+# Latin ext.
+capital-eszet = "flat-top-serifless"
 long-s = "bent-hook-serifless"
 eszet = "sulzbacher-serifless"
 lower-eth = "curly-bar"
+capital-thorn = "serifless"
 lower-thorn = "serifless"
 # Non-latin
 lower-alpha = "crossing"
@@ -8145,8 +8210,10 @@ w = "straight-serifed"
 x = "straight-serifed"
 y = "straight-turn-serifed"
 z = "straight-serifed"
+capital-eszet = "flat-top-serifed"
 long-s = "bent-hook-bottom-serifed"
 eszet = "sulzbacher-bottom-serifed"
+capital-thorn = "serifed"
 lower-thorn = "serifed"
 capital-gamma = "serifed"
 capital-lambda = "straight-base-serifed"
@@ -8419,6 +8486,7 @@ k = "symmetric-touching-serifless"
 l = "serifed"
 u = "toothed-serifless"
 y = "straight-turn-serifless"
+capital-eszet = "rounded-serifless"
 long-s = "flat-hook-serifless"
 eszet = "longs-s-lig-serifless"
 lower-chi = "semi-chancery-straight"
@@ -8474,6 +8542,7 @@ k = "symmetric-touching-serifed"
 u = "toothed-serifed"
 y = "straight-turn-serifed"
 z = "straight-serifed"
+capital-eszet = "rounded-serifed"
 long-s = "flat-hook-bottom-serifed"
 eszet = "longs-s-lig-bottom-serifed"
 cyrl-capital-ka = "symmetric-touching-serifed"
@@ -8706,6 +8775,7 @@ l = "serifed-flat-tailed"
 r = "hookless-serifless"
 u = "toothed-serifless"
 y = "straight-turn-serifless"
+capital-eszet = "rounded-serifless"
 long-s = "flat-hook-serifless"
 eszet = "longs-s-lig-serifless"
 lower-delta = "flat-top"
@@ -8760,6 +8830,7 @@ w = "straight-serifed"
 x = "straight-serifed"
 y = "straight-turn-serifed"
 z = "straight-serifed"
+capital-eszet = "rounded-serifed"
 long-s = "flat-hook-bottom-serifed"
 eszet = "longs-s-lig-bottom-serifed"
 lower-mu = "tailed-serifed"
@@ -9015,6 +9086,7 @@ r = "hookless-serifless"
 u = "toothed-serifless"
 w = "straight-flat-top-serifless"
 y = "straight-turn-serifless"
+capital-eszet = "rounded-serifless"
 long-s = "flat-hook-middle-serifed"
 eszet = "longs-s-lig-serifless"
 lower-lambda = "straight-turn"
@@ -9060,6 +9132,7 @@ u = "toothed-serifed"
 w = "straight-flat-top-serifed"
 y = "straight-turn-serifed"
 z = "straight-serifed"
+capital-eszet = "rounded-serifed"
 long-s = "flat-hook-double-serifed"
 eszet = "longs-s-lig-bottom-serifed"
 cyrl-capital-u = "straight-turn-serifed"
@@ -9197,6 +9270,7 @@ capital-m = "slanted-sides-hanging-serifless"
 a = "double-storey-toothless-corner"
 b = "toothless-corner-serifless"
 d = "toothless-corner-serifless"
+f = "serifless"
 g = "single-storey-earless-corner"
 i = "serifed-semi-tailed"
 k = "symmetric-touching-serifless"
@@ -9208,6 +9282,7 @@ q = "earless-corner-straight-serifless"
 r = "earless-corner-serifless"
 u = "toothless-corner-serifless"
 y = "straight-turn-serifless"
+capital-eszet = "rounded-serifless"
 long-s = "bent-hook-serifless"
 eszet = "longs-s-lig-serifless"
 lower-alpha = "barred-earless-corner-tailed"
@@ -9264,6 +9339,7 @@ capital-k = "symmetric-touching-serifed"
 capital-m = "slanted-sides-hanging-serifed"
 b = "toothless-corner-serifed"
 d = "toothless-corner-serifed"
+f = "serifed"
 k = "symmetric-touching-serifed"
 m = "earless-corner-double-arch-short-leg-serifed"
 n = "earless-corner-straight-serifed"
@@ -9273,6 +9349,7 @@ r = "earless-corner-serifed"
 u = "toothless-corner-serifed"
 y = "straight-turn-serifed"
 z = "straight-serifed"
+capital-eszet = "rounded-serifed"
 long-s = "bent-hook-bottom-serifed"
 eszet = "longs-s-lig-bottom-serifed"
 capital-gamma = "serifed"
@@ -9290,6 +9367,7 @@ micro-sign = "toothless-corner-serifed"
 
 [composite.ss12.slab-override.italic]
 d = "tailed-serifed"
+f = "tailed"
 k = "symmetric-touching-top-left-serifed"
 m = "earless-corner-double-arch-short-leg-bottom-right-serifed"
 n = "earless-corner-straight-motion-serifed"
@@ -9640,6 +9718,7 @@ r = "serifed"
 t = "bent-hook-short-neck2"
 u = "toothed-serifed"
 y = "straight-turn-serifless"
+capital-eszet = "rounded-serifless"
 long-s = "flat-hook-middle-serifed"
 eszet = "longs-s-lig-middle-serifed"
 lower-thorn = "motion-serifed"
@@ -9695,6 +9774,7 @@ w = "straight-serifed"
 x = "straight-serifed"
 y = "straight-turn-serifed"
 z = "straight-serifed"
+capital-eszet = "rounded-serifed"
 long-s = "flat-hook-double-serifed"
 eszet = "longs-s-lig-dual-serifed"
 lower-thorn = "serifed"
@@ -9753,6 +9833,7 @@ z = "straight-serifless"
 long-s = "bent-hook-serifless"
 eszet = "longs-s-lig-serifless"
 lower-eth = "straight-bar"
+capital-thorn = "motion-serifed"
 lower-iota = "serifed-flat-tailed"
 lower-lambda = "tailed-turn"
 lower-tau = "flat-tailed"
@@ -9841,6 +9922,7 @@ y = "straight-turn-serifed"
 z = "straight-top-serifed"
 long-s = "bent-hook-bottom-serifed"
 eszet = "longs-s-lig-bottom-serifed"
+capital-thorn = "serifed"
 cyrl-ze = "unilateral-inward-serifed"
 cyrl-capital-ka = "symmetric-connected-serifed"
 cyrl-ka = "symmetric-connected-serifed"
