Add Capital Eszet variants with top-left corner.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -4489,14 +4489,31 @@ rank = 2
 descriptionAffix = "flat top"
 selectorAffix.Eszet = "flatTop"
 
+[prime.capital-eszet.variants-buildup.stages.body.corner]
+rank = 3
+descriptionAffix = "top-left corner"
+selectorAffix.Eszet = "corner"
+
 [prime.capital-eszet.variants-buildup.stages.serifs.serifless]
 rank = 1
 descriptionJoiner = "without"
 descriptionAffix = "serifs"
 selectorAffix.Eszet = "serifless"
 
-[prime.capital-eszet.variants-buildup.stages.serifs.serifed]
+[prime.capital-eszet.variants-buildup.stages.serifs.bottom-serifed]
 rank = 2
+enableIf = [{ body = "corner" }]
+descriptionAffix = "bottom serif"
+selectorAffix.Eszet = "bottomSerifed"
+
+[prime.capital-eszet.variants-buildup.stages.serifs.motion-serifed]
+rank = 3
+enableIf = [{ body = "corner" }]
+descriptionAffix = "motion serifs"
+selectorAffix.Eszet = "motionSerifed"
+
+[prime.capital-eszet.variants-buildup.stages.serifs.serifed]
+rank = 4
 descriptionAffix = "serifs"
 selectorAffix.Eszet = "serifed"
 
@@ -9595,6 +9612,7 @@ t = "flat-hook"
 u = "toothed-serifless"
 w = "straight-flat-top-serifless"
 y = "straight-turn-serifless"
+capital-eszet = "corner-serifless"
 long-s = "flat-hook-double-serifed"
 eszet = "traditional-flat-hook-serifless"
 lower-delta = "flat-top"
@@ -9661,6 +9679,7 @@ k = "straight-serifed"
 u = "toothed-serifed"
 w = "straight-flat-top-serifed"
 y = "straight-turn-serifed"
+capital-eszet = "corner-bottom-serifed"
 eszet = "traditional-flat-hook-bottom-serifed"
 cyrl-capital-ka = "symmetric-connected-serifed"
 cyrl-ka = "symmetric-connected-serifed"
@@ -9830,6 +9849,7 @@ w = "straight-serifless"
 x = "straight-serifless"
 y = "straight-turn-serifless"
 z = "straight-serifless"
+capital-eszet = "corner-motion-serifed"
 long-s = "bent-hook-serifless"
 eszet = "longs-s-lig-serifless"
 lower-eth = "straight-bar"
@@ -9920,6 +9940,7 @@ w = "straight-serifed"
 x = "straight-serifed"
 y = "straight-turn-serifed"
 z = "straight-top-serifed"
+capital-eszet = "corner-serifed"
 long-s = "bent-hook-bottom-serifed"
 eszet = "longs-s-lig-bottom-serifed"
 capital-thorn = "serifed"
