Add square-dotted variant for brailles (#2388).

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -7206,6 +7206,25 @@ selector.punctuationDot = "square"
 
 
 
+[prime.braille-dot]
+sampler = "⠭⠽"
+hotChars = "⠭⠽"
+nonBreakingTagForNewVariantSelector = "VXAE" # REMOVE IN NEXT MAJOR VERSION CHANGE
+samplerExplain = "Dot shape in braille"
+tagKind = "dot"
+
+[prime.braille-dot.variants.round]
+rank = 1
+description = "Braille use round dots"
+selector.brailleDot = "round"
+
+[prime.braille-dot.variants.square]
+rank = 2
+description = "Braille use square dots"
+selector.brailleDot = "square"
+
+
+
 [prime.tilde]
 sampler = "~"
 tagKind = "symbol"
@@ -8126,6 +8145,7 @@ nine = "straight-bar"
 tittle = "round"
 punctuation-dot = "round"
 diacritic-dot = "round"
+braille-dot = "round"
 # Symbols
 tilde = "low"
 asterisk = "penta-high"
