Make `revs`-derived letters follow `cyrl/{Ze|ze}`.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -5448,6 +5448,7 @@ selector."latn/Epsilon" = "serifless"
 selector."cyrl/Ze" = "serifless"
 selector."cyrl/ZeTopSerifOnly" = "serifless"
 selector."cyrl/ZeBottomSerifOnly" = "serifless"
+selector.revS = "serifless"
 
 [prime.cyrl-capital-ze.variants.unilateral-serifed]
 rank = 2
@@ -5456,6 +5457,7 @@ selector."latn/Epsilon" = "unilateralSerifed"
 selector."cyrl/Ze" = "unilateralSerifed"
 selector."cyrl/ZeTopSerifOnly" = "unilateralSerifed"
 selector."cyrl/ZeBottomSerifOnly" = "serifless"
+selector.revS = "unilateralSerifed"
 
 [prime.cyrl-capital-ze.variants.unilateral-bottom-serifed]
 rank = 3
@@ -5465,6 +5467,7 @@ selector."latn/Epsilon" = "unilateralSerifed"
 selector."cyrl/Ze" = "bottomSerifed"
 selector."cyrl/ZeTopSerifOnly" = "serifless"
 selector."cyrl/ZeBottomSerifOnly" = "bottomSerifed"
+selector.revS = "serifless"
 
 [prime.cyrl-capital-ze.variants.bilateral-serifed]
 rank = 4
@@ -5473,6 +5476,7 @@ selector."latn/Epsilon" = "bilateralSerifed"
 selector."cyrl/Ze" = "bilateralSerifed"
 selector."cyrl/ZeTopSerifOnly" = "unilateralSerifed"
 selector."cyrl/ZeBottomSerifOnly" = "bottomSerifed"
+selector.revS = "bilateralSerifed"
 
 [prime.cyrl-capital-ze.variants.unilateral-inward-serifed]
 rank = 5
@@ -5481,6 +5485,7 @@ selector."latn/Epsilon" = "unilateralInwardSerifed"
 selector."cyrl/Ze" = "unilateralInwardSerifed"
 selector."cyrl/ZeTopSerifOnly" = "unilateralInwardSerifed"
 selector."cyrl/ZeBottomSerifOnly" = "serifless"
+selector.revS = "unilateralInwardSerifed"
 
 [prime.cyrl-capital-ze.variants.unilateral-bottom-inward-serifed]
 rank = 6
@@ -5490,6 +5495,7 @@ selector."latn/Epsilon" = "unilateralInwardSerifed"
 selector."cyrl/Ze" = "bottomInwardSerifed"
 selector."cyrl/ZeTopSerifOnly" = "serifless"
 selector."cyrl/ZeBottomSerifOnly" = "bottomInwardSerifed"
+selector.revS = "serifless"
 
 [prime.cyrl-capital-ze.variants.bilateral-inward-serifed]
 rank = 7
@@ -5498,6 +5504,7 @@ selector."latn/Epsilon" = "bilateralInwardSerifed"
 selector."cyrl/Ze" = "bilateralInwardSerifed"
 selector."cyrl/ZeTopSerifOnly" = "unilateralInwardSerifed"
 selector."cyrl/ZeBottomSerifOnly" = "bottomInwardSerifed"
+selector.revS = "bilateralInwardSerifed"
 
 
 
@@ -5515,6 +5522,8 @@ selector."cyrl/ze" = "serifless"
 selector."cyrl/ze/descBase" = "bottomSerifed"
 selector."cyrl/zeTopSerifOnly" = "serifless"
 selector."cyrl/zeBottomSerifOnly" = "serifless"
+selector.revs = "serifless"
+selector."revs/descBase" = "bottomSerifed"
 
 [prime.cyrl-ze.variants.unilateral-serifed]
 rank = 2
@@ -5525,6 +5534,8 @@ selector."cyrl/ze" = "unilateralSerifed"
 selector."cyrl/ze/descBase" = "bilateralSerifed"
 selector."cyrl/zeTopSerifOnly" = "unilateralSerifed"
 selector."cyrl/zeBottomSerifOnly" = "serifless"
+selector.revs = "unilateralSerifed"
+selector."revs/descBase" = "bilateralSerifed"
 
 [prime.cyrl-ze.variants.unilateral-bottom-serifed]
 rank = 3
@@ -5536,6 +5547,8 @@ selector."cyrl/ze" = "bottomSerifed"
 selector."cyrl/ze/descBase" = "bottomSerifed"
 selector."cyrl/zeTopSerifOnly" = "serifless"
 selector."cyrl/zeBottomSerifOnly" = "bottomSerifed"
+selector.revs = "serifless"
+selector."revs/descBase" = "bottomSerifed"
 
 [prime.cyrl-ze.variants.bilateral-serifed]
 rank = 4
@@ -5546,6 +5559,8 @@ selector."cyrl/ze" = "bilateralSerifed"
 selector."cyrl/ze/descBase" = "bilateralSerifed"
 selector."cyrl/zeTopSerifOnly" = "unilateralSerifed"
 selector."cyrl/zeBottomSerifOnly" = "bottomSerifed"
+selector.revs = "bilateralSerifed"
+selector."revs/descBase" = "bilateralSerifed"
 
 [prime.cyrl-ze.variants.unilateral-inward-serifed]
 rank = 5
@@ -5556,6 +5571,8 @@ selector."cyrl/ze" = "unilateralInwardSerifed"
 selector."cyrl/ze/descBase" = "hybridSerifed1"
 selector."cyrl/zeTopSerifOnly" = "unilateralInwardSerifed"
 selector."cyrl/zeBottomSerifOnly" = "serifless"
+selector.revs = "unilateralInwardSerifed"
+selector."revs/descBase" = "hybridSerifed1"
 
 [prime.cyrl-ze.variants.unilateral-bottom-inward-serifed]
 rank = 6
@@ -5567,6 +5584,8 @@ selector."cyrl/ze" = "bottomInwardSerifed"
 selector."cyrl/ze/descBase" = "bottomSerifed"
 selector."cyrl/zeTopSerifOnly" = "serifless"
 selector."cyrl/zeBottomSerifOnly" = "bottomInwardSerifed"
+selector.revs = "serifless"
+selector."revs/descBase" = "bottomSerifed"
 
 [prime.cyrl-ze.variants.bilateral-inward-serifed]
 rank = 7
@@ -5577,6 +5596,8 @@ selector."cyrl/ze" = "bilateralInwardSerifed"
 selector."cyrl/ze/descBase" = "hybridSerifed1"
 selector."cyrl/zeTopSerifOnly" = "unilateralInwardSerifed"
 selector."cyrl/zeBottomSerifOnly" = "bottomInwardSerifed"
+selector.revs = "bilateralInwardSerifed"
+selector."revs/descBase" = "hybridSerifed1"
 
 
 
@@ -8747,6 +8768,7 @@ l = "serifed-semi-tailed"
 r = "corner-hooked-serifed"
 u = "toothed-serifless"
 y = "straight-turn-serifless"
+capital-eszet = "rounded-serifless"
 long-s = "bent-hook-serifless"
 eszet = "longs-s-lig-serifless"
 lower-iota = "serifed-semi-tailed"
@@ -8804,6 +8826,7 @@ w = "straight-serifed"
 x = "straight-serifed"
 y = "straight-turn-serifed"
 z = "straight-serifed"
+capital-eszet = "rounded-serifed"
 long-s = "bent-hook-bottom-serifed"
 eszet = "longs-s-lig-bottom-serifed"
 lower-mu = "toothed-serifed"
