Return `private-parameters.toml` to git ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ packages/font-otl/src/**/*.mjs
 # Private config files
 private.toml
 private-build-plans.toml
+params/private-parameters.toml
 
 # pages-source ignores
 .next
