Minor cleanup of variants.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -374,6 +374,7 @@ description = "`9` with a straight bar"
 selector.nine = "straightBar"
 
 
+
 [prime.zero]
 sampler = "0"
 tagKind = "digit"
@@ -6242,7 +6243,6 @@ selector."cyrl/zeBottomSerifOnly" = "serifless"
 
 [prime.cyrl-ze.variants.unilateral-bottom-serifed]
 rank = 3
-nonBreakingVariantAdditionPriority = 100
 description = "Cyrillic Lower Ze (`з`) with serif at bottom"
 selector."latn/epsilon" = "unilateralSerifed"
 selector."latn/epsilon/descBase" = "bilateralSerifed"
@@ -6273,7 +6273,6 @@ selector."cyrl/zeBottomSerifOnly" = "serifless"
 
 [prime.cyrl-ze.variants.unilateral-bottom-inward-serifed]
 rank = 6
-nonBreakingVariantAdditionPriority = 200
 description = "Cyrillic Lower Ze (`з`) with inward serif at bottom"
 selector."latn/epsilon" = "unilateralInwardSerifed"
 selector."latn/epsilon/descBase" = "hybridSerifed1"
@@ -8942,6 +8941,7 @@ l = "serifed-semi-tailed"
 r = "corner-hooked-serifed"
 u = "toothed-serifless"
 y = "straight-turn-serifless"
+capital-eszet = "rounded-serifless"
 long-s = "bent-hook-serifless"
 eszet = "longs-s-lig-serifless"
 lower-iota = "serifed-semi-tailed"
@@ -9001,6 +9001,7 @@ w = "straight-serifed"
 x = "straight-serifed"
 y = "straight-turn-serifed"
 z = "straight-serifed"
+capital-eszet = "rounded-serifed"
 long-s = "bent-hook-bottom-serifed"
 eszet = "longs-s-lig-bottom-serifed"
 lower-mu = "toothed-serifed"
@@ -9145,6 +9146,7 @@ long-s = "flat-hook-serifless"
 eszet = "longs-s-lig-serifless"
 lower-iota = "zshaped"
 lower-lambda = "straight-turn"
+lower-mu = "toothed-bottom-right-serifed"
 lower-pi = "tailless"
 lower-tau = "tailless"
 cyrl-a = "double-storey-serifless"
@@ -9194,7 +9196,7 @@ y = "straight-turn-serifed"
 z = "straight-serifed"
 long-s = "flat-hook-bottom-serifed"
 eszet = "longs-s-lig-bottom-serifed"
-lower-mu = "tailed-serifed"
+lower-mu = "toothed-serifed"
 cyrl-a = "double-storey-serifed"
 cyrl-ve = "standard-bilateral-serifed"
 cyrl-ze = "unilateral-serifed"
@@ -9472,6 +9474,8 @@ lower-delta = "flat-top"
 lower-iota = "serifed-flat-tailed"
 lower-lambda = "straight"
 lower-tau = "flat-tailed"
+cyrl-a = "double-storey-toothless-corner"
+cyrl-u = "straight-serifless"
 one = "base-flat-top-serif"
 four = "closed-serifless"
 six = "straight-bar"
@@ -9492,6 +9496,7 @@ a = "single-storey-tailed"
 i = "serifed-flat-tailed"
 j = "serifed"
 l = "serifed-flat-tailed"
+cyrl-a = "single-storey-tailed"
 cyrl-u = "cursive-flat-hook-serifless"
 
 [composite.ss10.slab-override.design]
@@ -9539,6 +9544,7 @@ six = "closed-contour"
 seven = "straight-serifless"
 eight = "two-circles"
 nine = "closed-contour"
+braille-dot = "square"
 tilde = "high"
 asterisk = "hex-high"
 caret = "high"
@@ -9808,6 +9814,7 @@ l = "serifed-flat-tailed"
 t = "flat-hook"
 u = "toothless-rounded-serifless"
 w = "straight-flat-top-serifless"
+y = "straight-serifless"
 long-s = "flat-hook-serifless"
 eszet = "sulzbacher-serifless"
 lower-eth = "straight-bar"
@@ -9818,8 +9825,10 @@ lower-lambda = "straight"
 lower-mu = "toothed-serifless"
 lower-xi = "rounded"
 lower-tau = "flat-tailed"
+cyrl-a = "double-storey-serifless"
 cyrl-ve = "standard-serifless"
 cyrl-em = "hanging-serifless"
+cyrl-u = "straight-serifless"
 cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "dotted"
@@ -9853,6 +9862,7 @@ y = "cursive-flat-hook-serifless"
 long-s = "flat-hook-tailed"
 eszet = "sulzbacher-tailed-serifless"
 lower-alpha = "barred-tailed"
+cyrl-a = "single-storey-tailed"
 cyrl-u = "cursive-flat-hook-serifless"
 
 [composite.ss14.slab-override.design]
@@ -9874,6 +9884,7 @@ long-s = "flat-hook-bottom-serifed"
 eszet = "sulzbacher-bottom-serifed"
 lower-alpha = "barred-double-serifed"
 lower-mu = "toothed-serifed"
+cyrl-a = "double-storey-serifed"
 cyrl-ve = "standard-bilateral-serifed"
 cyrl-em = "hanging-serifed"
 cyrl-capital-u = "straight-serifed"
@@ -9897,6 +9908,7 @@ long-s = "flat-hook-tailed"
 eszet = "sulzbacher-tailed-serifless"
 lower-alpha = "barred-tailed"
 lower-mu = "toothed-motion-serifed"
+cyrl-a = "single-storey-tailed"
 cyrl-ve = "standard-unilateral-serifed"
 cyrl-u = "cursive-flat-hook-motion-serifed"
 micro-sign = "toothed-motion-serifed"
