--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1876,6 +1876,7 @@ rank = 1
 descriptionAffix = "straight shape"
 selectorAffix.X = "straight"
 selectorAffix."X/sansSerif" = "straight"
+selectorAffix."X/descBase" = "straight"
 selectorAffix."cyrl/Rha/right" = "straight"
 
 [prime.capital-x.variants-buildup.stages.body.curly]
@@ -1883,6 +1884,7 @@ rank = 2
 descriptionAffix = "curly shape"
 selectorAffix.X = "curly"
 selectorAffix."X/sansSerif" = "curly"
+selectorAffix."X/descBase" = "curly"
 selectorAffix."cyrl/Rha/right" = "curly"
 
 [prime.capital-x.variants-buildup.stages.serifs.serifless]
@@ -1891,20 +1893,31 @@ descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix.X = "serifless"
 selectorAffix."X/sansSerif" = "serifless"
+selectorAffix."X/descBase" = "serifless"
 selectorAffix."cyrl/Rha/right" = "serifless"
 
 [prime.capital-x.variants-buildup.stages.serifs.motion-serifed]
 rank = 2
-descriptionAffix = "motion serifs"
+descriptionAffix = "motion serifs at top-left"
 selectorAffix.X = "motionSerifed"
 selectorAffix."X/sansSerif" = "serifless"
+selectorAffix."X/descBase" = "motionSerifed"
 selectorAffix."cyrl/Rha/right" = "serifless"
 
-[prime.capital-x.variants-buildup.stages.serifs.serifed]
+[prime.capital-x.variants-buildup.stages.serifs.bilateral-motion-serifed]
 rank = 3
+descriptionAffix = "motion serifs at top-left and bottom-right"
+selectorAffix.X = "bilateralMotionSerifed"
+selectorAffix."X/sansSerif" = "serifless"
+selectorAffix."X/descBase" = "motionSerifed"
+selectorAffix."cyrl/Rha/right" = "bilateralMotionSerifed"
+
+[prime.capital-x.variants-buildup.stages.serifs.serifed]
+rank = 4
 descriptionAffix = "serifs"
 selectorAffix.X = "serifed"
 selectorAffix."X/sansSerif" = "serifless"
+selectorAffix."X/descBase" = "serifed"
 selectorAffix."cyrl/Rha/right" = "serifed"
 
 
@@ -4698,6 +4711,7 @@ rank = 1
 descriptionAffix = "straight shape"
 selectorAffix.x = "straight"
 selectorAffix."x/sansSerif" = "straight"
+selectorAffix."x/descBase" = "straight"
 selectorAffix."cyrl/rha/right" = "straight"
 
 [prime.x.variants-buildup.stages.body.curly]
@@ -4705,6 +4719,7 @@ rank = 2
 descriptionAffix = "curly shape"
 selectorAffix.x = "curly"
 selectorAffix."x/sansSerif" = "curly"
+selectorAffix."x/descBase" = "curly"
 selectorAffix."cyrl/rha/right" = "curly"
 
 [prime.x.variants-buildup.stages.body.semi-chancery-straight]
@@ -4712,6 +4727,7 @@ rank = 3
 descriptionAffix = "Semi-chancery shape with straight counter-leg"
 selectorAffix.x = "semiChanceryStraight"
 selectorAffix."x/sansSerif" = "semiChanceryStraight"
+selectorAffix."x/descBase" = "semiChanceryStraight"
 selectorAffix."cyrl/rha/right" = "semiChanceryStraight"
 
 [prime.x.variants-buildup.stages.body.semi-chancery-curly]
@@ -4719,6 +4735,7 @@ rank = 4
 descriptionAffix = "Semi-chancery shape with curly counter-leg"
 selectorAffix.x = "semiChanceryCurly"
 selectorAffix."x/sansSerif" = "semiChanceryCurly"
+selectorAffix."x/descBase" = "semiChanceryCurly"
 selectorAffix."cyrl/rha/right" = "semiChanceryCurly"
 
 [prime.x.variants-buildup.stages.body.chancery]
@@ -4727,6 +4744,7 @@ next = "END"
 descriptionAffix = "Chancery shape"
 selectorAffix.x = "chancery"
 selectorAffix."x/sansSerif" = "chancery"
+selectorAffix."x/descBase" = "chancery"
 selectorAffix."cyrl/rha/right" = "chancery"
 
 [prime.x.variants-buildup.stages.body.cursive]
@@ -4735,6 +4753,7 @@ next = "END"
 descriptionAffix = "cursive shape"
 selectorAffix.x = "cursive"
 selectorAffix."x/sansSerif" = "cursive"
+selectorAffix."x/descBase" = "cursive"
 selectorAffix."cyrl/rha/right" = "cursive"
 
 [prime.x.variants-buildup.stages.serifs.serifless]
@@ -4743,21 +4762,33 @@ descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix.x = "serifless"
 selectorAffix."x/sansSerif" = "serifless"
+selectorAffix."x/descBase" = "serifless"
 selectorAffix."cyrl/rha/right" = "serifless"
 
 [prime.x.variants-buildup.stages.serifs.motion-serifed]
 rank = 2
 disableIf = [{body = "semi-chancery-straight"}, {body = "semi-chancery-curly"}]
-descriptionAffix = "motion serifs"
+descriptionAffix = "motion serifs at top-left"
 selectorAffix.x = "motionSerifed"
 selectorAffix."x/sansSerif" = "serifless"
+selectorAffix."x/descBase" = "motionSerifed"
 selectorAffix."cyrl/rha/right" = "serifless"
 
-[prime.x.variants-buildup.stages.serifs.serifed]
+[prime.x.variants-buildup.stages.serifs.bilateral-motion-serifed]
 rank = 3
+disableIf = [{body = "semi-chancery-straight"}, {body = "semi-chancery-curly"}]
+descriptionAffix = "motion serifs at top-left and bottom-right"
+selectorAffix.x = "bilateralMotionSerifed"
+selectorAffix."x/sansSerif" = "serifless"
+selectorAffix."x/descBase" = "motionSerifed"
+selectorAffix."cyrl/rha/right" = "bilateralMotionSerifed"
+
+[prime.x.variants-buildup.stages.serifs.serifed]
+rank = 4
 descriptionAffix = "serifs"
 selectorAffix.x = "serifed"
 selectorAffix."x/sansSerif" = "serifless"
+selectorAffix."x/descBase" = "serifed"
 selectorAffix."cyrl/rha/right" = "serifed"
 
 
@@ -5874,17 +5905,15 @@ selectorAffix."grek/chi/sansSerif" = "curly"
 
 [prime.lower-chi.variants-buildup.stages.body.semi-chancery-straight]
 rank = 3
-next = "END"
 descriptionAffix = "Semi-chancery shape with straight counter-leg"
-selectorAffix."grek/chi" = "semiChanceryStraightSerifless"
-selectorAffix."grek/chi/sansSerif" = "semiChanceryStraightSerifless"
+selectorAffix."grek/chi" = "semiChanceryStraight"
+selectorAffix."grek/chi/sansSerif" = "semiChanceryStraight"
 
 [prime.lower-chi.variants-buildup.stages.body.semi-chancery-curly]
 rank = 4
-next = "END"
 descriptionAffix = "Semi-chancery shape with curly counter-leg"
-selectorAffix."grek/chi" = "semiChanceryCurlySerifless"
-selectorAffix."grek/chi/sansSerif" = "semiChanceryCurlySerifless"
+selectorAffix."grek/chi" = "semiChanceryCurly"
+selectorAffix."grek/chi/sansSerif" = "semiChanceryCurly"
 
 [prime.lower-chi.variants-buildup.stages.body.chancery]
 rank = 5
@@ -5902,14 +5931,32 @@ selectorAffix."grek/chi/sansSerif" = "serifless"
 
 [prime.lower-chi.variants-buildup.stages.serifs.motion-serifed]
 rank = 2
-descriptionAffix = "motion serifs"
+disableIf = [{body = "semi-chancery-straight"}, {body = "semi-chancery-curly"}]
+descriptionAffix = "motion serifs at top-left"
 selectorAffix."grek/chi" = "motionSerifed"
 selectorAffix."grek/chi/sansSerif" = "serifless"
 
-[prime.lower-chi.variants-buildup.stages.serifs.serifed]
+[prime.lower-chi.variants-buildup.stages.serifs.bilateral-motion-serifed]
 rank = 3
-descriptionAffix = "serifs"
+disableIf = [{body = "semi-chancery-straight"}, {body = "semi-chancery-curly"}]
+descriptionAffix = "motion serifs at top-left and bottom-right"
 selectorAffix."grek/chi" = "bilateralMotionSerifed"
+selectorAffix."grek/chi/sansSerif" = "serifless"
+
+[prime.lower-chi.variants-buildup.stages.serifs.serifed__normal]
+rank = 4
+disableIf = [{body = "semi-chancery-straight"}, {body = "semi-chancery-curly"}]
+keyAffix = "serifed"
+descriptionAffix = "serifs"
+selectorAffix."grek/chi" = "grekLowerChiSerifed"
+selectorAffix."grek/chi/sansSerif" = "serifless"
+
+[prime.lower-chi.variants-buildup.stages.serifs.serifed__semi-chancery]
+rank = 4
+disableIf = [{body = "straight"}, {body = "curly"}]
+keyAffix = "serifed"
+descriptionAffix = "serifs"
+selectorAffix."grek/chi" = "serifed"
 selectorAffix."grek/chi/sansSerif" = "serifless"
 
 
@@ -8426,7 +8473,7 @@ capital-gamma = "serifed"
 capital-lambda = "straight-base-serifed"
 lower-lambda = "straight-turn"
 lower-mu = "tailed-serifed"
-lower-chi = "straight-serifed"
+lower-chi = "straight-bilateral-motion-serifed"
 cyrl-a = "double-storey-serifed"
 cyrl-ve = "standard-bilateral-serifed"
 cyrl-capital-ze = "unilateral-serifed"
@@ -8516,7 +8563,7 @@ lower-lambda = "tailed-turn"
 lower-mu = "toothed-serifless"
 lower-pi = "tailless"
 lower-tau = "tailless"
-lower-chi = "semi-chancery-straight"
+lower-chi = "semi-chancery-straight-serifless"
 cyrl-a = "double-storey-serifless"
 cyrl-ve = "standard-serifless"
 cyrl-capital-zhe = "straight"
@@ -8716,7 +8763,7 @@ y = "straight-turn-serifless"
 capital-eszet = "rounded-serifless"
 long-s = "flat-hook-serifless"
 eszet = "longs-s-lig-serifless"
-lower-chi = "semi-chancery-straight"
+lower-chi = "semi-chancery-straight-serifless"
 lower-eth = "straight-bar"
 lower-lambda = "tailed-turn"
 cyrl-a = "double-storey-serifless"
@@ -8839,7 +8886,7 @@ lower-eth = "straight-bar"
 lower-iota = "serifed-flat-tailed"
 lower-lambda = "straight-turn"
 lower-tau = "flat-tailed"
-lower-chi = "semi-chancery-straight"
+lower-chi = "semi-chancery-straight-serifless"
 cyrl-a = "double-storey-serifless"
 cyrl-ve = "standard-serifless"
 cyrl-capital-zhe = "straight"
@@ -9101,7 +9148,7 @@ capital-eszet = "rounded-serifed"
 long-s = "flat-hook-bottom-serifed"
 eszet = "longs-s-lig-bottom-serifed"
 lower-mu = "tailed-serifed"
-lower-chi = "straight-serifed"
+lower-chi = "straight-bilateral-motion-serifed"
 cyrl-ve = "standard-bilateral-serifed"
 cyrl-ze = "unilateral-serifed"
 cyrl-ka = "symmetric-connected-serifed"
@@ -9253,7 +9300,7 @@ lower-delta = "flat-top"
 capital-lambda = "curly-serifless"
 lower-lambda = "curly-tailed-turn"
 lower-mu = "toothed-serifless"
-lower-chi = "semi-chancery-curly"
+lower-chi = "semi-chancery-curly-serifless"
 cyrl-a = "double-storey-serifless"
 cyrl-capital-zhe = "curly"
 cyrl-zhe = "curly"
@@ -9943,7 +9990,7 @@ lower-delta = "flat-top"
 lower-iota = "serifed-flat-tailed"
 lower-lambda = "tailed-turn"
 lower-tau = "flat-tailed"
-lower-chi = "semi-chancery-straight"
+lower-chi = "semi-chancery-straight-serifless"
 cyrl-a = "double-storey-tailed"
 cyrl-capital-ka = "symmetric-connected-bottom-right-serifed"
 cyrl-ka = "symmetric-connected-bottom-right-serifed"
@@ -10197,7 +10244,7 @@ capital-thorn = "motion-serifed"
 lower-iota = "serifed-flat-tailed"
 lower-lambda = "tailed-turn"
 lower-tau = "flat-tailed"
-lower-chi = "semi-chancery-straight"
+lower-chi = "semi-chancery-straight-serifless"
 cyrl-a = "double-storey-tailed"
 cyrl-capital-ze = "unilateral-inward-serifed"
 cyrl-ze = "serifless"
@@ -10478,7 +10525,7 @@ y = "curly-turn-serifed"
 z = "curly-serifed"
 capital-lambda = "curly-base-serifed"
 lower-lambda = "curly-turn"
-lower-chi = "curly-serifed"
+lower-chi = "curly-bilateral-motion-serifed"
 cyrl-capital-u = "curly-turn-serifed"
 cyrl-u = "curly-turn-serifed"
 cyrl-capital-ya = "curly-serifed"
